# hearthealth

./: build.gradle  gradle.properties  settings.gradle
app/: build.gradle  local.properties  proguard-rules.pro
app/gradle/wrapper/: gradle-wrapper.properties
app/libs/: rmswitch.aar
app/libs/scichart/: core-release.aar
app/release/: output.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: 1510586421963.xml
app/src/main/res/anim/: in_from_bottom.xml  in_from_left.xml  in_from_right.xml  in_from_top.xml  out_to_bottom.xml  out_to_left.xml  (+6 more)
buildsystem/: appinfo.gradle  buildscript.gradle  dependencies.gradle  jacoco.gradle  runners.gradle
ecgsignalprocessor/: build.gradle
ecgsignalprocessor/libs/: aapt2-3.3.0-5013011-linux
ecgsignalprocessor/src/main/: AndroidManifest.xml
ecgsignalprocessor/src/main/jni/: CMakeLists.txt  ecgprocessorproxy.cpp
ecgsignalprocessor/src/main/jni/core/: CMakeLists.txt
ecgsignalprocessor/src/main/jni/core/demodulation/include/: CommonTypes.h  FMDetectorParams.h  FM_Detector.h  fir.h  firs_coefs.h
ecgsignalprocessor/src/main/jni/core/demodulation/src/: firs_coefs.cpp
ecgsignalprocessor/src/main/jni/core/ecgprocessor/include/: ECGProcessor.h
ecgsignalprocessor/src/main/jni/core/ecgprocessor/src/: ECGProcessor.cpp
ecgsignalprocessor/src/main/jni/core/qrsdetection/include/: RPeakDetector.h
ecgsignalprocessor/src/main/jni/core/qrsdetection/src/: RPeakDetector.cpp
ecgsignalprocessor/src/main/jni/libs/: CMakeLists.txt
ecgsignalprocessor/src/main/jni/libs/firpm_d/: README.md
ecgsignalprocessor/src/main/jni/libs/firpm_d/include/firpm/: util.h
ecgsignalprocessor/src/main/jni/libs/firpm_d/src/: pm.cpp
gradle/wrapper/: gradle-wrapper.properties
(+724 files in other folders)
